# MemoryIndex

./: .env.example  .gitignore  API.md  CHEATSHEET.txt  CLAUDE.md  DELIVERY_REPORT.md  Formula.rb  GPU_QUICKSTART.md  HOMEBREW_FLOWCHART.md  HOMEBREW_GUIDE.md  INSTALL.md  LICENSE  MANIFEST.in  MANUAL.md  Makefile  NEXT_STEPS.md  PACKAGING.md  PACKAGING_COMPLETE.md  Plan.md  QUICKREF.md  README.md  Remember.md  USAGE.md  agents.md  alias.sh  config_example.py  db_integration.py  debug_drission.py  demo.sh  find_wheel.py  find_wheel_v2.py  fix_fts_tokenizer.py  fix_unicode.py  homebrew-commands.sh  install.sh  ocr_bilingual.py  ocr_parallel.py  ocr_utils.py  process_video.py  pyproject.toml  (+26 more)
.claude/: settings.local.json
Formula/: memoryindex.rb
XHS-Downloader/: README_INTEGRATION.md
archiver/: README.md  __init__.py  example.py
archiver/config/: .gitkeep  __init__.py  cookie_example.json  zhihu_cookie.json
archiver/core/: __init__.py  crawler.py  drission_crawler.py  markdown_converter.py
archiver/utils/: __init__.py  browser_manager.py  cookie_manager.py  image_downloader.py  url_parser.py
backend/: .gitignore  background_worker.py  main.py  models.py  services.py  task_manager.py
cli/: __init__.py  archive_cli.py  db_stats.py  main_cli.py  search_cli.py  tg_bot.py
core/: __init__.py  archive_processor.py  db_integration.py  image_utils.py  import_video.py  process_media.py  process_video.py  smart_frame_extractor.py  video_downloader.py
db/: __init__.py  models.py  repository.py  schema.py  schema.sql  search.py  search_multi.py  tag_filters.py  whoosh_search.py
docs/: ACCURATE_VS_FUZZY_SEARCH.md  AUTO_VENV.md  DATABASE_AUTO_SAVE.md  DATABASE_COMMANDS.md  DATABASE_DESIGN.md  DATABASE_QUICKSTART.md  DATABASE_README.md  DATABASE_SUMMARY.md  DOWNLOAD_GUIDE.md  DOWNLOAD_IMPLEMENTATION.md  DOWNLOAD_README.md  ENGLISH_TEXT_ISSUE.md  FTS_SEARCH_FIX.md  GPU_ACCELERATION.md  GPU_EXAMPLES.md  GPU_FIX_NOTES.md  GROQ_SETUP.md  IMPROVEMENTS_2024_12.md  MACOS_OCR_PERFORMANCE.md  MULTIPROCESS_OCR_ENABLED.md  MULTI_KEYWORD_SEARCH.md  OCR_DEBUG_GUIDE.md  OCR_DIAGNOSIS_FINAL.md  OCR_MODELS.md  OCR_OPTIMIZATION.md  OCR_PERFORMANCE_OPTIMIZATION.md  OCR_QUICKREF.txt  OCR_SOLUTION_FINAL.md  OCR_UPGRADE_SUMMARY.md  OCR_WORKERS_GUIDE.md  PROJECT_STATUS.txt  QUICKSTART.md  START.md  URL_EXTRACTION.md  URL_EXTRACTION_GUIDE.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ContentCard.tsx  ContentPreview.tsx  Layout.tsx  Pagination.tsx  SearchBar.tsx  StatCard.tsx  TagFilter.tsx
frontend/src/pages/: ArchiveListPage.tsx  ContentDetailPage.tsx  DashboardPage.tsx  HomePage.tsx  SearchPage.tsx
frontend/src/store/: index.ts
ocr/: __init__.py  ocr_bilingual.py  ocr_parallel.py  ocr_vision.py  vision_ocr.swift  vision_ocr_bin
scripts/: __init__.py  analyze_xhs_parent_v2.py  analyze_xhs_structure.py  analyze_xhs_structure_v2.py  api_server_example.py  check_xhs_images.py  cleanup_project.py  configure_drission_cookie.py  configure_xhs_cookie.py  configure_zhihu_cookie.py  cookie_manager.py  debug_xiaohongshu.py  deploy_database.sh  drission_archive_cli.py  example_browser_singleton.py  export_cookies.py  fix_fts_tokenizer.py  locate_xhs_content.py  login_helper.py  login_twitter.py  reset_browser.py  save_xhs_html.py  scheduled_task_example.py  selftest.py  test_browser_singleton.py  test_cookie_unified.py  test_drission.sh  test_twitter_cookie.py  test_xhs_cookie.py  unified_archive_cli.py  url_cleaner.py  verify_archiver.py
storage/database/: knowledge.db
storage/whoosh_index/: MAIN_y20qp4syexs4gp4u.seg  _MAIN_1.toc
tests/: test_archive_integration.py  test_archiver.py  test_database.py  test_database_import.py  test_env.py  test_gpu.py  test_import_video_url_detection.py  test_multi_search.py  test_ocr_env.py  test_tag_filters.py  test_vision_ocr.py
