[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryindex"
version = "1.0.0"
description = "智能视频知识库系统 - 视频下载、OCR识别、全文搜索一体化解决方案"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Catherina"}
]
keywords = ["video", "ocr", "search", "knowledge-base", "paddleocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Indexing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "paddlepaddle>=3.2.2",
    "paddleocr>=2.7.0",
    "opencv-python",
    "numpy",
    "groq",
    "python-dotenv",
    "yt-dlp",
    "tabulate>=0.9.0",
    "Whoosh>=2.7.4",
    "jieba>=0.42.1",
]

[project.urls]
Homepage = "https://github.com/Catherina0/MemoryIndex"
Repository = "https://github.com/Catherina0/MemoryIndex"
Issues = "https://github.com/Catherina0/MemoryIndex/issues"

[project.scripts]
memoryindex = "cli.search_cli:main"
memidx = "cli.search_cli:main"
memidx-process = "core.process_video:main"
memidx-download = "core.video_downloader:main"

[tool.setuptools]
packages = ["cli", "core", "db", "ocr"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.txt", "*.md"]
