[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryindex"
version = "1.0.8"
description = "智能视频知识库系统 - 视频下载、OCR识别、全文搜索一体化解决方案"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Catherina"}
]
keywords = ["video", "ocr", "search", "knowledge-base", "paddleocr", "web-archiver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Indexing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "groq",
    "python-dotenv",
    "yt-dlp",
    "tabulate>=0.9.0",
    "Whoosh>=2.7.4",
    "jieba>=0.42.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# PaddleOCR - REMOVED: Using Apple Vision OCR instead
# paddle = [
#     "paddlepaddle>=3.0.0",
#     "paddleocr>=2.7.0",
#     "opencv-python",
# ]
# 网页归档支持
archiver = [
    "crawl4ai>=0.2.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.0.0",
    "DrissionPage>=4.0.0",
]
# 完整安装（包含所有可选依赖）
full = [
    "memoryindex[archiver]",
    "browser-cookie3>=0.19.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/Catherina0/MemoryIndex"
Repository = "https://github.com/Catherina0/MemoryIndex"
Issues = "https://github.com/Catherina0/MemoryIndex/issues"
Documentation = "https://github.com/Catherina0/MemoryIndex#readme"

[project.scripts]
memoryindex = "cli.main_cli:main"
memidx = "cli.main_cli:main"
memidx-process = "core.process_video:main"
memidx-download = "core.video_downloader:main"
memidx-archive = "cli.archive_cli:main"
memidx-search = "cli.search_cli:main"

[tool.setuptools]
packages = ["cli", "core", "db", "ocr", "scripts", "archiver", "archiver.core", "archiver.platforms", "archiver.utils"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.swift"]
"db" = ["schema.sql"]
"ocr" = ["vision_ocr.swift"]
